; ModuleID = '/home/carl/AnghaBench/git/extr_unpack-trees.c_check_submodule_move_head.c'
source_filename = "/home/carl/AnghaBench/git/extr_unpack-trees.c_check_submodule_move_head.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }
%struct.unpack_trees_options = type { i64 }
%struct.submodule = type { i32 }

@SUBMODULE_MOVE_HEAD_DRY_RUN = common dso_local global i32 0, align 4
@SUBMODULE_MOVE_HEAD_FORCE = common dso_local global i32 0, align 4
@ERROR_WOULD_LOSE_SUBMODULE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_entry*, i8*, i8*, %struct.unpack_trees_options*)* @check_submodule_move_head to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_submodule_move_head(%struct.cache_entry* %0, i8* %1, i8* %2, %struct.unpack_trees_options* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.cache_entry*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.unpack_trees_options*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.submodule*, align 8
  store %struct.cache_entry* %0, %struct.cache_entry** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store %struct.unpack_trees_options* %3, %struct.unpack_trees_options** %9, align 8
  %12 = load i32, i32* @SUBMODULE_MOVE_HEAD_DRY_RUN, align 4
  store i32 %12, i32* %10, align 4
  %13 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %14 = call %struct.submodule* @submodule_from_ce(%struct.cache_entry* %13)
  store %struct.submodule* %14, %struct.submodule** %11, align 8
  %15 = load %struct.submodule*, %struct.submodule** %11, align 8
  %16 = icmp ne %struct.submodule* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %44

18:                                               ; preds = %4
  %19 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %9, align 8
  %20 = getelementptr inbounds %struct.unpack_trees_options, %struct.unpack_trees_options* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load i32, i32* @SUBMODULE_MOVE_HEAD_FORCE, align 4
  %25 = load i32, i32* %10, align 4
  %26 = or i32 %25, %24
  store i32 %26, i32* %10, align 4
  br label %27

27:                                               ; preds = %23, %18
  %28 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %29 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i8*, i8** %7, align 8
  %32 = load i8*, i8** %8, align 8
  %33 = load i32, i32* %10, align 4
  %34 = call i64 @submodule_move_head(i32 %30, i8* %31, i8* %32, i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %43

36:                                               ; preds = %27
  %37 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %9, align 8
  %38 = load i32, i32* @ERROR_WOULD_LOSE_SUBMODULE, align 4
  %39 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %40 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = call i32 @add_rejected_path(%struct.unpack_trees_options* %37, i32 %38, i32 %41)
  store i32 %42, i32* %5, align 4
  br label %44

43:                                               ; preds = %27
  store i32 0, i32* %5, align 4
  br label %44

44:                                               ; preds = %43, %36, %17
  %45 = load i32, i32* %5, align 4
  ret i32 %45
}

declare dso_local %struct.submodule* @submodule_from_ce(%struct.cache_entry*) #1

declare dso_local i64 @submodule_move_head(i32, i8*, i8*, i32) #1

declare dso_local i32 @add_rejected_path(%struct.unpack_trees_options*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
